--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
       padding: 0;
       scroll-behavior: smooth;
       overflow-x: hidden;
-      background-image: url('./images/Diagonals.svg'), url('./images/Grass.png');
+      background-image: url('./images/Diagonals.svg'), url('./images/grass-fb.png');
       background-size: contain, contain;
       background-repeat: no-repeat, no-repeat;
       }
       @media screen and (max-width: 414px) {
       html,
       body {
-      background-image: url('./images/Mobile.svg'), url('./images/Grass.png');
+      background-image: url('./images/Mobile.svg'), url('./images/grass-fb.png');
       }
       }
       @font-face {
