Fix Mobile Button

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                   <div height="2.34" class="sc-bdVaJa jxAuQg"></div>
                   <div id="headline-buttons">
                     <div color="primary" class="sc-bwzfXH dBzJcq" onclick="scrollToId('#ebook')">
-                      <button class="button">Get eBook</button>
+                      <button class="button" onclick="scrollToId('#ebook')">Get eBook</button>
                     </div>
                   </div>
                 </div>
