--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     <div id="navbar">
                       <div id="navigation">
                         <div id="nav-right">
-                          <div class="sc-ifAKCX iybelv" onclick="scrollToId('#ebook')">Get eBook</div>
+                          <div class="sc-ifAKCX iybelv" onclick="scrollToId('#ebooks')">Get eBook</div>
                           <div class="sc-ifAKCX iybelv" onclick="scrollToId('#projects')">Projects</div>
                           <div class="sc-ifAKCX iybelv" onclick="scrollToId('#about-us')">About Us</div>
                         </div>
@@ -97,7 +97,7 @@
                   <div height="2.34" class="sc-bdVaJa jxAuQg"></div>
                   <div id="headline-buttons">
                     <div color="primary" class="sc-bwzfXH dBzJcq" onclick="scrollToId('#ebooks')">
-                      <button class="button">Get eBook</button>
+                      <button class="button" onclick="scrollToId('#ebooks')">Get eBook</button>
                     </div>
                   </div>
                 </div>
