--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                           <div class="ti-right">
                             <div class="sc-dnqmqq wUogB">
                               <div class="timeline-item-content">
-                                <h1>Sufficient Ecovillage</h1>
+                                <h1>Unit of Self-Sufficiency</h1>
                                 <div height="1" class="sc-bdVaJa mNAnW"></div>
                                 <p>We will work together on the proof-of-concept of Unit of Self-Sufficiency.</p>
                                 <div height="1" class="sc-bdVaJa mNAnW"></div>
@@ -167,7 +167,7 @@
                           <div class="ti-left">
                             <div class="sc-dnqmqq wUogB">
                               <div class="timeline-item-content">
-                                <h1>Sufficient Ecovillage</h1>
+                                <h1>Unit of Self-Sufficiency</h1>
                                 <div height="1" class="sc-bdVaJa mNAnW"></div>
                                 <p>We will work together on the proof-of-concept of Unit of Self-Sufficiency.</p>
                                 <div height="1" class="sc-bdVaJa mNAnW"></div>
@@ -236,7 +236,7 @@
                 <div id="footer-top">
                   <div id="logo-container">
                     <div id="logo"></div>
-                    <p id="logo-description">Get our free eBook and learn about our solution to some of thebiggest world problems.</p>
+                    <p id="logo-description">Get our free eBook and learn about our ideas on how to solve some of the world's biggest problems.</p>
                   </div>
                   <div class="links">
                     <h2>Social Media</h2>
