Revert "Remove Unnecessary Space"
This reverts commit 3434c8be7a089edb86c0617d7cd7a90e7d3a43e7.

--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                     <div height="1.75" class="sc-bdVaJa GSOB"></div>
                     <h2 style="color: black;">Our Team</h2>
                   </div>
+                  <div height="3.51" class="sc-bdVaJa vieZS"></div>
                   <div class="text">
                     <p>We are a non-profit organization of scientists and engineers who want to bring a change to the world. Our goal is to provide tools to achieve the goal of self-sufficiency. This great feat will not be possible without you. Only together can we achieve this.</p>
                   </div>
