--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
     <link rel="shortcut icon" type="image/png" href="/images/favicon.png">
-    <title>Aeroaquaponic</title>
+    <title>Aeroaquaponic: Unit of Self-Sufficiency</title>
     <link rel="manifest" href="/manifest.json">
     <style id="/src/index.css:-css" type="text/css">@import url('https://fonts.googleapis.com/css?family=Red+Hat+Display|Work+Sans:500,700&display=swap');
       html,
