--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                   <h2>Self-sufficiency and Sustainability</h2>
                   <div height="2.34" class="sc-bdVaJa jxAuQg"></div>
                   <div id="headline-buttons">
-                    <div color="primary" class="sc-bwzfXH dBzJcq" onclick="scrollToId('#ebooks')">
-                      <button class="button" onclick="scrollToId('#ebooks')">Get eBook</button>
+                    <div color="primary" class="sc-bwzfXH dBzJcq" ontouchstart="scrollToId('#ebooks')" onclick="scrollToId('#ebooks')">
+                      <button class="button">Get eBook</button>
                     </div>
                   </div>
                 </div>
