Add Cam to Team Page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       .wUogB{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;box-shadow:0px 0px 1vw lightgrey;width:100%;height:100%;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;} .wUogB .timeline-item-content{margin:2vw;} .wUogB .timeline-item-content h1{font-size:1.56vw;line-height:1.56vw;white-space:unset;} .wUogB .timeline-item-content p{font-size:1.18vw;line-height:1.56vw;} @media screen and (max-width:414px){.wUogB{box-shadow:0px 0px 2vw lightgrey;}.wUogB .timeline-item-content{margin:4vw;}.wUogB .timeline-item-content h1{font-size:4.53vw;line-height:4.53vw;margin-bottom:2vw;}.wUogB .timeline-item-content p{font-size:3.54vw;line-height:4.68vw;}}
       /* sc-component-id: sc-iwsKbI */
       /* sc-component-id: sc-gZMcBi */
-      .ieXxDL{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:30vw;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;font-size:1.75vw;margin:2vw;} .ieXxDL .image{height:12.5vw;width:12.5vw;box-shadow:0 0 8px rgba(0,0,0,0.3);border-radius:50vw;background-color:grey;background-size:cover;background-position:center;background-image:url(./images/dima.png);} .ieXxDL .name{font-weight:bold;} .ieXxDL .description{text-align:center;width:20vw;} @media screen and (max-width:414px){.ieXxDL{display:none;}}.kfLDAn{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:30vw;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;font-size:1.75vw;margin:2vw;} .kfLDAn .image{height:12.5vw;width:12.5vw;box-shadow:0 0 8px rgba(0,0,0,0.3);border-radius:50vw;background-color:grey;background-size:cover;background-position:center;background-image:url(./images/kirill.jpg);} .kfLDAn .name{font-weight:bold;} .kfLDAn .description{text-align:center;width:20vw;} @media screen and (max-width:414px){.kfLDAn{display:none;}}
+      .ieXxDL{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:30vw;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;font-size:1.75vw;margin:2vw;} .ieXxDL .image{height:12.5vw;width:12.5vw;box-shadow:0 0 8px rgba(0,0,0,0.3);border-radius:50vw;background-color:grey;background-size:cover;background-position:center;background-image:url(./images/dima.png);} .cam .image{background-image:url(./images/cam.jpg);} .ieXxDL .name{font-weight:bold;} .ieXxDL .description{text-align:center;width:20vw;} @media screen and (max-width:414px){.ieXxDL{display:none;}}.kfLDAn{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:column;-ms-flex-direction:column;flex-direction:column;width:30vw;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;font-size:1.75vw;margin:2vw;} .kfLDAn .image{height:12.5vw;width:12.5vw;box-shadow:0 0 8px rgba(0,0,0,0.3);border-radius:50vw;background-color:grey;background-size:cover;background-position:center;background-image:url(./images/kirill.jpg);} .kfLDAn .name{font-weight:bold;} .kfLDAn .description{text-align:center;width:20vw;} @media screen and (max-width:414px){.kfLDAn{display:none;}}
       /* sc-component-id: sc-gqjmRU */
       .kcoqJY{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;width:100%;-webkit-align-items:start;-webkit-box-align:start;-ms-flex-align:start;align-items:start;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;}
       /* sc-component-id: sc-VigVT */
@@ -211,19 +211,26 @@
                   </div>
                   <div height="3.51" class="sc-bdVaJa vieZS"></div>
                   <div class="sc-gqjmRU kcoqJY">
-                    <div class="sc-gZMcBi kfLDAn">
-                      <div class="image"></div>
-                      <div height="1.7" class="sc-bdVaJa UwlIp"></div>
-                      <div class="name">Kirill Novik</div>
-                      <div height="1" class="sc-bdVaJa mNAnW"></div>
-                      <div class="description">Senior Software Engineer</div>
-                    </div>
                     <div class="sc-gZMcBi ieXxDL">
                       <div class="image"></div>
                       <div height="1.7" class="sc-bdVaJa UwlIp"></div>
                       <div class="name">Dmitry Dementyev</div>
                       <div height="1" class="sc-bdVaJa mNAnW"></div>
                       <div class="description">Chief Researcher in Aquaculture</div>
+                    </div>
+                    <div class="sc-gZMcBi ieXxDL cam">
+                      <div class="image"></div>
+                      <div height="1.7" class="sc-bdVaJa UwlIp"></div>
+                      <div class="name">Cam Schubert</div>
+                      <div height="1" class="sc-bdVaJa mNAnW"></div>
+                      <div class="description">Medical Scientist</div>
+                    </div>
+                    <div class="sc-gZMcBi kfLDAn">
+                      <div class="image"></div>
+                      <div height="1.7" class="sc-bdVaJa UwlIp"></div>
+                      <div class="name">Kirill Novik</div>
+                      <div height="1" class="sc-bdVaJa mNAnW"></div>
+                      <div class="description">Senior Software Engineer</div>
                     </div>
                   </div>
                   <div height="10.05" class="sc-bdVaJa kLdViN"></div>
