--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
     <title>Aeroaquaponic</title>
-    <base href="/"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <link rel="icon" type="image/x-icon" href="favicon.ico"/>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png" />
     <style type="text/css">
       html {
         scroll-behavior: smooth;
@@ -15,8 +16,13 @@
         padding: 0;
       }
     </style>
-  <link rel="stylesheet" href="styles.css"></head>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
   <body>
     <app-root></app-root>
-  <script src="runtime.js" defer></script><script src="polyfills.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
+    <script src="runtime.js" defer></script>
+    <script src="polyfills.js" defer></script>
+    <script src="vendor.js" defer></script>
+    <script src="main.js" defer></script>
+  </body>
 </html>
